// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gif selectors .getGifFromId 1`] = `
Object {
  "bitly_gif_url": "http://gph.is/2x2b2gw",
  "bitly_url": "http://gph.is/2x2b2gw",
  "content_url": "",
  "embed_url": "https://giphy.com/embed/3o6nUSu6ZB82udVAUo",
  "id": "3o6nUSu6ZB82udVAUo",
  "images": Object {
    "480w_still": Object {
      "height": "360",
      "url": "https://media4.giphy.com/media/3o6nUSu6ZB82udVAUo/480w_s.jpg",
      "width": "480",
    },
    "downsized": Object {
      "height": "360",
      "size": "1023275",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized.gif",
      "width": "480",
    },
    "downsized_large": Object {
      "height": "360",
      "size": "1023275",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
      "width": "480",
    },
    "downsized_medium": Object {
      "height": "360",
      "size": "1023275",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
      "width": "480",
    },
    "downsized_small": Object {
      "height": "360",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized-small.mp4",
      "mp4_size": "46849",
      "width": "480",
    },
    "downsized_still": Object {
      "height": "360",
      "size": "78410",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized_s.gif",
      "width": "480",
    },
    "fixed_height": Object {
      "height": "200",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.mp4",
      "mp4_size": "22414",
      "size": "380867",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.webp",
      "webp_size": "45828",
      "width": "266",
    },
    "fixed_height_downsampled": Object {
      "height": "200",
      "size": "198402",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_d.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_d.webp",
      "webp_size": "22660",
      "width": "266",
    },
    "fixed_height_small": Object {
      "height": "100",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.mp4",
      "mp4_size": "9400",
      "size": "114974",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.webp",
      "webp_size": "19516",
      "width": "133",
    },
    "fixed_height_small_still": Object {
      "height": "100",
      "size": "10992",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100_s.gif",
      "width": "133",
    },
    "fixed_height_still": Object {
      "height": "200",
      "size": "31976",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_s.gif",
      "width": "266",
    },
    "fixed_width": Object {
      "height": "150",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.mp4",
      "mp4_size": "15257",
      "size": "228931",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.webp",
      "webp_size": "32722",
      "width": "200",
    },
    "fixed_width_downsampled": Object {
      "height": "150",
      "size": "121698",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_d.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_d.webp",
      "webp_size": "16218",
      "width": "200",
    },
    "fixed_width_small": Object {
      "height": "75",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.mp4",
      "mp4_size": "6551",
      "size": "70024",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.webp",
      "webp_size": "13268",
      "width": "100",
    },
    "fixed_width_small_still": Object {
      "height": "75",
      "size": "7229",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w_s.gif",
      "width": "100",
    },
    "fixed_width_still": Object {
      "height": "150",
      "size": "20351",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_s.gif",
      "width": "200",
    },
    "looping": Object {
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-loop.mp4",
      "mp4_size": "861039",
    },
    "original": Object {
      "frames": "12",
      "hash": "59709ff71f9e529c1fb6eaf7980c000a",
      "height": "360",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.mp4",
      "mp4_size": "46849",
      "size": "1023275",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
      "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.webp",
      "webp_size": "98906",
      "width": "480",
    },
    "original_mp4": Object {
      "height": "360",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.mp4",
      "mp4_size": "46849",
      "width": "480",
    },
    "original_still": Object {
      "height": "360",
      "size": "78410",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy_s.gif",
      "width": "480",
    },
    "preview": Object {
      "height": "360",
      "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.mp4",
      "mp4_size": "46849",
      "width": "480",
    },
    "preview_gif": Object {
      "height": "90",
      "size": "48649",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.gif",
      "width": "120",
    },
    "preview_webp": Object {
      "height": "304",
      "size": "49308",
      "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.webp",
      "width": "405",
    },
  },
  "import_datetime": "2017-08-29 20:26:12",
  "is_indexable": 0,
  "rating": "g",
  "slug": "maroon5-maroon-5-she-will-be-loved-3o6nUSu6ZB82udVAUo",
  "source": "https://www.youtube.com/watch?v=nIjVuRTm-dc",
  "source_post_url": "https://www.youtube.com/watch?v=nIjVuRTm-dc",
  "source_tld": "www.youtube.com",
  "trending_datetime": "2017-09-07 21:38:56",
  "type": "gif",
  "url": "https://giphy.com/gifs/maroon5-maroon-5-she-will-be-loved-3o6nUSu6ZB82udVAUo",
  "user": Object {
    "avatar_url": "https://media.giphy.com/avatars/maroon5/PEbr2UyzWosE.jpg",
    "banner_url": "https://media.giphy.com/headers/maroon5/SWw8125Em2NK.jpg",
    "display_name": "Maroon 5",
    "profile_url": "https://giphy.com/maroon5/",
    "twitter": "@maroon5",
    "username": "maroon5",
  },
  "username": "maroon5",
}
`;

exports[`gif selectors .getGifIds 1`] = `
Array [
  "3o6nUSu6ZB82udVAUo",
]
`;

exports[`gif selectors .getOriginalGifFromId 1`] = `
Object {
  "frames": "12",
  "hash": "59709ff71f9e529c1fb6eaf7980c000a",
  "height": "360",
  "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.mp4",
  "mp4_size": "46849",
  "size": "1023275",
  "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
  "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.webp",
  "webp_size": "98906",
  "width": "480",
}
`;

exports[`gif selectors .getPreviewGifFromId 1`] = `
Object {
  "height": "200",
  "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.mp4",
  "mp4_size": "22414",
  "size": "380867",
  "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.gif",
  "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.webp",
  "webp_size": "45828",
  "width": "266",
}
`;

exports[`gif selectors .getPreviewStillFromId 1`] = `
Object {
  "height": "200",
  "size": "31976",
  "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_s.gif",
  "width": "266",
}
`;

exports[`gif selectors .getTrendingGifObjList 1`] = `
Array [
  Object {
    "bitly_gif_url": "http://gph.is/2x2b2gw",
    "bitly_url": "http://gph.is/2x2b2gw",
    "content_url": "",
    "embed_url": "https://giphy.com/embed/3o6nUSu6ZB82udVAUo",
    "id": "3o6nUSu6ZB82udVAUo",
    "images": Object {
      "480w_still": Object {
        "height": "360",
        "url": "https://media4.giphy.com/media/3o6nUSu6ZB82udVAUo/480w_s.jpg",
        "width": "480",
      },
      "downsized": Object {
        "height": "360",
        "size": "1023275",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized.gif",
        "width": "480",
      },
      "downsized_large": Object {
        "height": "360",
        "size": "1023275",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
        "width": "480",
      },
      "downsized_medium": Object {
        "height": "360",
        "size": "1023275",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
        "width": "480",
      },
      "downsized_small": Object {
        "height": "360",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized-small.mp4",
        "mp4_size": "46849",
        "width": "480",
      },
      "downsized_still": Object {
        "height": "360",
        "size": "78410",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-downsized_s.gif",
        "width": "480",
      },
      "fixed_height": Object {
        "height": "200",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.mp4",
        "mp4_size": "22414",
        "size": "380867",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200.webp",
        "webp_size": "45828",
        "width": "266",
      },
      "fixed_height_downsampled": Object {
        "height": "200",
        "size": "198402",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_d.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_d.webp",
        "webp_size": "22660",
        "width": "266",
      },
      "fixed_height_small": Object {
        "height": "100",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.mp4",
        "mp4_size": "9400",
        "size": "114974",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100.webp",
        "webp_size": "19516",
        "width": "133",
      },
      "fixed_height_small_still": Object {
        "height": "100",
        "size": "10992",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100_s.gif",
        "width": "133",
      },
      "fixed_height_still": Object {
        "height": "200",
        "size": "31976",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200_s.gif",
        "width": "266",
      },
      "fixed_width": Object {
        "height": "150",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.mp4",
        "mp4_size": "15257",
        "size": "228931",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w.webp",
        "webp_size": "32722",
        "width": "200",
      },
      "fixed_width_downsampled": Object {
        "height": "150",
        "size": "121698",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_d.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_d.webp",
        "webp_size": "16218",
        "width": "200",
      },
      "fixed_width_small": Object {
        "height": "75",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.mp4",
        "mp4_size": "6551",
        "size": "70024",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w.webp",
        "webp_size": "13268",
        "width": "100",
      },
      "fixed_width_small_still": Object {
        "height": "75",
        "size": "7229",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/100w_s.gif",
        "width": "100",
      },
      "fixed_width_still": Object {
        "height": "150",
        "size": "20351",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/200w_s.gif",
        "width": "200",
      },
      "looping": Object {
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-loop.mp4",
        "mp4_size": "861039",
      },
      "original": Object {
        "frames": "12",
        "hash": "59709ff71f9e529c1fb6eaf7980c000a",
        "height": "360",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.mp4",
        "mp4_size": "46849",
        "size": "1023275",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.gif",
        "webp": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.webp",
        "webp_size": "98906",
        "width": "480",
      },
      "original_mp4": Object {
        "height": "360",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy.mp4",
        "mp4_size": "46849",
        "width": "480",
      },
      "original_still": Object {
        "height": "360",
        "size": "78410",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy_s.gif",
        "width": "480",
      },
      "preview": Object {
        "height": "360",
        "mp4": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.mp4",
        "mp4_size": "46849",
        "width": "480",
      },
      "preview_gif": Object {
        "height": "90",
        "size": "48649",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.gif",
        "width": "120",
      },
      "preview_webp": Object {
        "height": "304",
        "size": "49308",
        "url": "https://media3.giphy.com/media/3o6nUSu6ZB82udVAUo/giphy-preview.webp",
        "width": "405",
      },
    },
    "import_datetime": "2017-08-29 20:26:12",
    "is_indexable": 0,
    "rating": "g",
    "slug": "maroon5-maroon-5-she-will-be-loved-3o6nUSu6ZB82udVAUo",
    "source": "https://www.youtube.com/watch?v=nIjVuRTm-dc",
    "source_post_url": "https://www.youtube.com/watch?v=nIjVuRTm-dc",
    "source_tld": "www.youtube.com",
    "trending_datetime": "2017-09-07 21:38:56",
    "type": "gif",
    "url": "https://giphy.com/gifs/maroon5-maroon-5-she-will-be-loved-3o6nUSu6ZB82udVAUo",
    "user": Object {
      "avatar_url": "https://media.giphy.com/avatars/maroon5/PEbr2UyzWosE.jpg",
      "banner_url": "https://media.giphy.com/headers/maroon5/SWw8125Em2NK.jpg",
      "display_name": "Maroon 5",
      "profile_url": "https://giphy.com/maroon5/",
      "twitter": "@maroon5",
      "username": "maroon5",
    },
    "username": "maroon5",
  },
]
`;

exports[`gif selectors .isLoading 1`] = `false`;
